# xai_pricing_optimization

./: .env.example  .gitignore  AGENTS.md  README.md  download_data.py  generate_demo_context.py  ingest.py  profile_data.py  pyproject.toml  solve_pricing.py  streamlit_app.py  validate_data.py
docs/: PRD.md  data_layer.md  synthetic_methodology.md
migrations/: 001_admin.sql  002_observed.sql  003_scenario.sql  004_views.sql  005_optimizer.sql
src/xai_pricing/: __init__.py  config.py  conversation.py  db.py  demand.py  dunnhumby.py  optimizer.py  planner.py  synthetic.py  ui_support.py  validation.py
tests/: conftest.py  test_conversation.py  test_db.py  test_demand.py  test_optimizer.py  test_planner.py  test_synthetic.py  test_ui_support.py  test_validation.py
