[project]
name = "xai-pricing-optimization"
version = "0.1.0"
description = "Explainable pricing optimization demo built on dunnhumby's Breakfast at the Frat dataset."
requires-python = ">=3.14"
dependencies = [
    "highspy>=1.14",
    "matplotlib>=3.10",
    "openpyxl>=3.1",
    "pandas>=2.3",
    "python-dotenv>=1.1",
    "pulp>=3.3",
    "streamlit>=1.46",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xai_pricing"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4",
]
